--- a/style.css
+++ b/style.css
@@ -1,11 +1,21 @@
 body {
     background-color: #f5f5f5;
     font-family: 'Roboto', sans-serif;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
-    text-align: left;
+    text-align: center;
+}
+
+label {
+    display: inline-block;
+    align-items: center;
+    margin: 10px;
+    background-color: #858dde;
+    color: #f5f5f5;
+    border: solid 3px black;
+    border-radius: 5%;
 }
 
 .container {
@@ -17,14 +27,35 @@ body {
 
 .text label {
     display: block;
+    margin-top: 5px;
     margin-bottom: 5px;
     text-align: center;
+}
+
+.buttons {
+   background-color: #db0f75;
+   font-size: 20px;
+   color: #f5f5f5;
+   border: solid 3px black;
+   border-radius: 5%;
+    margin: 20px;
 }
 
 .key label {
     display: block;
     margin-bottom: 5px;
     text-align: center;
+}
+
+.buttons:hover {
+    background-color: #f5f5f5;
+    color: #db0f75;
+    border: solid 3px black;
+}
+
+label:hover {
+    background-color: #f5f5f5;
+    color: black;
 }
 
 
